--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.1.3",
     "lodash": "^4.17.21",
+    "swiper": "^8.4.5",
     "vue": "^3.2.36",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
